# shokupan

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
docker/: 10-auth.conf  10-mail.conf  10-master.conf  10-ssl.conf  Dockerfile  docker-compose.yml  dovecot.conf
docker/test-emails/BACKLOG/new/: 005
docker/test-emails/DOING/new/: 003
docker/test-emails/DONE/new/: 004
docker/test-emails/TODO/new/: 00001.eml  001  002
src/cli/: cli_application.cpp  cli_application.h  main.cpp
src/core/: email_card.cpp  email_card.h  imap_client.cpp  imap_client.h  kanban_model.cpp  kanban_model.h  mailbox_list.cpp  mailbox_list.h  settings.cpp  settings.h
src/gui/: card_dialog.cpp  card_dialog.h  card_widget.cpp  card_widget.h  kanban_board.cpp  kanban_board.h  main.cpp  main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h
tests/: cli_e2e.sh  imap_test.conf
